Se borra entidad redundante carrera_estuidante, refactors registroHorario